Fix overflow hidden

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -18,6 +18,10 @@
   max-width: 100%;
 }
 
+.card-wrapper.overflow-hidden {
+    overflow: hidden;
+}
+
 @media screen and (max-width: 700px) {
     .card {
         margin: 0;
